--- a/style.css
+++ b/style.css
@@ -35,5 +35,22 @@ a:hover {
 transform: translate(-50%, -50%);
     font-size: 80px;
     color: white;
+}
 
+#barre {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-size: 29px;
+    line-height: 60px; /* verticalement centré */
+    text-align: start;
+    padding-left: 0.7cm;
+
+    z-index: 1000;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.4);
 }
