--- a/style.css
+++ b/style.css
@@ -9,11 +9,10 @@
 #particles-js {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("https://i.postimg.cc/JzrcjR48/125667136-p0-master1200.jpg");
+    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("https://i.postimg.cc/MKMYHD5S/V3.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position-x: center;
-    background-postition-y: center;
+    background-size: 110%;
+    background-position: center;
     background-attachment: fixed;
     overflow: hidden;
 }
