--- a/style.css
+++ b/style.css
@@ -7,33 +7,64 @@
 }
 
 #particles-js {
-    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("https://i.postimg.cc/MKMYHD5S/V3.jpg");
     background-repeat: no-repeat;
-    background-size: 110%;
+    background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    z-index: -1;
     overflow: hidden;
+
+    transform: scale(1.05);
+    transform-origin: center;
 }
 
 a {
     color: white;
     text-decoration: none;
     transition: color 0.3s ease;
+
 }
 
 a:hover {
-    color: #00ffcc; /* ou une autre couleur douce */
+    color: #035712;  /*#00ffcc*/
     text-decoration: none;
 }
 #main{
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
-transform: translate(-50%, -50%);
-    font-size: 80px;
+    transform: translate(-50%, -50%);
+    font-size: 100px;
+    font-weight: 800 !important;
     color: white;
+}
+
+#sub{
+    font-family: 'Poppins', sans-serif !important;
+    position: absolute;
+    top: 54%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 25px;
+    font-weight: 100 !important;
+    color: #757575 !important;
+}
+
+#ytosu{
+    font-family: 'Poppins', sans-serif ;
+    position: absolute;
+    top: 57%;
+    left: 57.5%;
+    transform: translate(-50%, -50%);
+    font-size: 17px;
+    font-weight: 100 ;
+    color: #757575 ;
 }
 
 #barre {
@@ -52,4 +83,83 @@ transform: translate(-50%, -50%);
 
     z-index: 1000;
     box-shadow: 0 2px 4px rgba(0,0,0,0.4);
+}
+
+#flch {
+    position: fixed;
+    top: 2px;
+    left: 73px;
+    width: 100%;
+    height: 60px;
+
+
+    color: white;
+    font-size: 28px;
+    line-height: 60px; /* verticalement centré */
+    text-align: start;
+    padding-left: 0.7cm;
+
+    z-index: 1000;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.4);
+}
+
+#urlsite {
+    position: fixed;
+    top: 1px;
+    left: 88px;
+    width: 100%;
+    height: 60px;
+
+
+    color: white;
+    font-size: 19px;
+    line-height: 60px; /* verticalement centré */
+    text-align: start;
+    padding-left: 0.7cm;
+
+    z-index: 1000;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.4);
+}
+
+
+.container {
+    position: relative;
+    display: inline-block;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.speech-bubble {
+    display: none;
+    position: absolute;
+    top: 45px;
+    left: 10%;
+    width: 60px;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    font-size: 16px;
+    white-space: nowrap;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 1s ease, transform 1s ease;
+}
+
+.container:hover .speech-bubble {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.speech-bubble::before {
+    content: '';
+    position: absolute;
+    top: -10%;
+    left: 20px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #333;
+    transform: translateY(-50%);
 }
