--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ a:hover {
     padding: 6px 10px;
     border-radius: 10px;
     border: 2px solid #04AA6D;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.05);
     color: #04AA6D;
     text-align: center;
     text-decoration: none;
