--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a:hover {
     color: #035712;  /*#00ffcc*/
     text-decoration: none;
 }
-#main{
+#WIP{
     position: absolute;
     top: 45%;
     left: 50%;
